--- a/MPTally/Resource/category.plist
+++ b/MPTally/Resource/category.plist
@@ -3,305 +3,305 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>用餐</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_2.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>交通</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_4.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>服饰</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_27.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>丽人</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_13.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>日用品</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_28.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>娱乐</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_7.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>零食</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_3.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>酒水</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_22.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>住房</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_8.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>剧场</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_14.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>转账</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_15.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>腐败</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_16.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>运动</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_17.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>香烟</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_21.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>爱人</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_24.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>家庭</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_25.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>宠物</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_26.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>果蔬</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_29.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>小宝</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_30.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>学习</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_20.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string> 医疗</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_18.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>旅游</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_19.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>数码</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_23.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>充值</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_5.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>购物</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_6.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>约会</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_9.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>网购</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_10.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>鞋帽</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_11.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>护肤</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_12.png</string>
 		<key>isIncome</key>
 		<integer>0</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>一般</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_0.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>报销</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n1.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>工资</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n2.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>红包</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n3.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>兼职</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n4.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>奖金</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n5.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>投资</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n8.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>生活费</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n7.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>categoryTitle</key>
+		<key>categoryName</key>
 		<string>零花钱</string>
-		<key>categoryImageFileNmae</key>
+		<key>categoryImageFileName</key>
 		<string>type_big_n6.png</string>
 		<key>isIncome</key>
 		<integer>1</integer>
